[package]
name = "tracer"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.27"
pico-args = "0.4"
rand = "0.8"
pnet = "*"
ureq = { version = "2.1", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rusqlite = { version = "0.25", features = ["bundled", "uuid"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.13"
csv = "1.1"
dotenv = "0.15"
